SPEAr: add DB9000 LCD driver
Copy DB9000 LCD driver from st git tree:

git://git.stlinux.com/spear/linux-2.6.git next-3.3
commit a642f8da Input: stmpe-ts: Add runtime power management support

Note:
1. This also corresponds to the commits d99ce66f..0bb8e759
on drivers/video/db9000fb.c at st git tree.

2. This also corresponds to the commits 5752f257..d1699012
on include/video/db9000fb.h at st git tree.

Signed-off-by: Liming Wang <liming.wang@windriver.com>

--- a/drivers/video/Makefile
+++ b/drivers/video/Makefile
@@ -105,6 +105,7 @@ obj-$(CONFIG_FB_CIRRUS)		  += cirrusfb.o
 obj-$(CONFIG_FB_ASILIANT)	  += asiliantfb.o
 obj-$(CONFIG_FB_PXA)		  += pxafb.o
 obj-$(CONFIG_FB_PXA168)		  += pxa168fb.o
+obj-$(CONFIG_FB_DB9000)		  += db9000fb.o
 obj-$(CONFIG_PXA3XX_GCU)	  += pxa3xx-gcu.o
 obj-$(CONFIG_FB_W100)		  += w100fb.o
 obj-$(CONFIG_FB_TMIO)		  += tmiofb.o
