--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -1932,6 +1932,58 @@ config FB_PXA_PARAMETERS
 
 	  <file:Documentation/fb/pxafb.txt> describes the available parameters.
 
+config FB_DB9000
+	tristate "DB9000 LCD framebuffer support"
+	depends on FB && ARCH_SPEAR13XX
+	select FB_CFB_FILLRECT
+	select FB_CFB_COPYAREA
+	select FB_CFB_IMAGEBLIT
+	---help---
+	  Frame buffer driver for the DB9000 LCD controller in the
+	  STMicroelectronics SPEAR13xx processor.
+
+	  This driver is also available as a module ( = code which can be
+	  inserted and removed from the running kernel whenever you want). The
+	  module will be called db9000fb. If you want to compile it as a module,
+	  say M here and read <file:Documentation/kbuild/modules.txt>.
+
+	  If unsure, say N.
+
+config FB_DB9000_DRM
+	bool "DB9000 LCD DRM support"
+	depends on FB_DB9000 && DRM_MALI && GPU_MALI && GPU_MALI_UMP
+	default y
+	---help---
+	  Enable DB9000 support for DRM.
+
+config FB_DB9000_OVERLAY
+	bool "Support DB9000 Overlay(s) as framebuffer"
+	default n
+	depends on FB_DB9000 && (ARCH_SPEAR13XX)
+
+config FB_DB9000_PARAMETERS
+	bool "DB9000 LCD command line parameters"
+	default n
+	depends on FB_DB9000
+	---help---
+	  Enable the use of kernel command line or module parameters
+	  to configure the physical properties of the LCD panel when
+	  using the DB9000 LCD driver.
+
+	  This option allows you to override the panel parameters
+	  supplied by the platform in order to support multiple
+	  different models of flatpanel. If you will only be using a
+	  single model of flatpanel then you can safely leave this
+	  option disabled.
+
+config BACKLIGHT_DB9000_LCD
+	bool "DB9000 backlight control"
+	depends on FB_DB9000
+	select FB_BACKLIGHT
+	default n
+	---help---
+	  Say Y here if you want to control the backlight of your display.
+
 config PXA3XX_GCU
 	tristate "PXA3xx 2D graphics accelerator driver"
 	depends on FB_PXA
