usbnet/gobinet: add Sierra Wireless module driver
Source: GobiNet_2011-07-29-1026.tar.gz(https://www.codeaurora.org/
patches/quic/gobi/Gobi3000/GobiNet_2011-07-29-1026.tar.gz)

It is for gobinet MC8355 CDMA modem

Signed-off-by: Alfred Tan <atan@codeaurora.org>
Integrated-by: Yang Wei <wei.yang@windriver.com>

--- a/drivers/net/usb/Kconfig
+++ b/drivers/net/usb/Kconfig
@@ -483,5 +483,9 @@ config USB_VL600
 
 	  http://ubuntuforums.org/showpost.php?p=10589647&postcount=17
 
+config GOBINET
+	tristate "SIERRA WIRELESS GOBINET MC8355 CDMA MODEM"
+	depends on USB_USBNET
+	---help---
 
 endmenu
