--- a/drivers/usb/serial/Kconfig
+++ b/drivers/usb/serial/Kconfig
@@ -669,6 +669,16 @@ config USB_SERIAL_SSU100
 	  To compile this driver as a module, choose M here: the
 	  module will be called ssu100.
 
+config FUSIONSTAGING
+        tristate "Fusion Wireless USB CDMA 1x/EVDO modem"
+        ---help---
+	help
+          Say Y here if you want to use a Fusion USB device.
+
+          To compile this driver as a module, choose M here: the module will be
+          called fusion wireless module.
+
+
 config USB_SERIAL_DEBUG
 	tristate "USB Debugging Device"
 	help
