usb/serial: add Sierra Wireless module driver for kbc_km2m806 platform
Source: GobiSerial_2011-07-29-1026.tar.gz(https://www.codeaurora.org/
patches/quic/gobi/Gobi3000/GobiSerial_2011-07-29-1026.tar.gz)

This is for Sierra Wireless MC8355 CDMA modem

Signed-off-by: Alfred Tan <atan@codeaurora.org>
Integrated-by: Yang Wei <wei.yang@windriver.com>

--- a/drivers/usb/serial/Kconfig
+++ b/drivers/usb/serial/Kconfig
@@ -678,6 +678,14 @@ config FUSIONSTAGING
           To compile this driver as a module, choose M here: the module will be
           called fusion wireless module.
 
+config GOBISERIAL
+       tristate "Sierra Wireless GobiSerial modem"
+	   ---help---
+    help
+	    Say Y here if you want to use a GobiSerial device.
+
+		To compile this driver as a module, choose M here: the
+		module will be called gobi serial.
 
 config USB_SERIAL_DEBUG
 	tristate "USB Debugging Device"
