--- a/drivers/usb/serial/Makefile
+++ b/drivers/usb/serial/Makefile
@@ -63,3 +63,4 @@ obj-$(CONFIG_USB_SERIAL_XIRCOM)			+= keyspan_pda.o
 obj-$(CONFIG_USB_SERIAL_VIVOPAY_SERIAL)		+= vivopay-serial.o
 obj-$(CONFIG_USB_SERIAL_ZIO)			+= zio.o
 obj-$(CONFIG_FUSIONSTAGING)                += fusion.o
+obj-$(CONFIG_GOBISERIAL)           += gobi_serial.o 
