--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -47,6 +47,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_SGTL5000 if I2C
 	select SND_SOC_SN95031 if INTEL_SCU_IPC
 	select SND_SOC_SPDIF
+	select SND_SOC_STA529 if I2C
 	select SND_SOC_SSM2602 if SND_SOC_I2C_AND_SPI
 	select SND_SOC_STA32X if I2C
 	select SND_SOC_STAC9766 if SND_SOC_AC97_BUS
@@ -248,6 +249,10 @@ config SND_SOC_SPDIF
 
 config SND_SOC_SSM2602
 	tristate
+
+config SND_SOC_STA529
+	tristate
+	depends on I2C
 
 config SND_SOC_STA32X
 	tristate
