ocf: OCF_CRYPTOSOFT depends on CRYPTO_HASH2
ERROR: "crypto_alloc_ahash" [crypto/ocf/cryptosoft.ko] undefined!
ERROR: "crypto_alloc_ablkcipher" [crypto/ocf/cryptosoft.ko] undefined!
ERROR: "crypto_ahash_digest" [crypto/ocf/cryptosoft.ko] undefined!
ERROR: "crypto_ahash_setkey" [crypto/ocf/cryptosoft.ko] undefined!

These are defined in crypto/ahash.c, which is enabled by CRYPTO_HASH2.

Signed-off-by: Michel Thebeau <michel.thebeau@windriver.com>

--- a/crypto/ocf/Kconfig
+++ b/crypto/ocf/Kconfig
@@ -26,7 +26,7 @@ config OCF_CRYPTODEV
 
 config OCF_CRYPTOSOFT
 	tristate "cryptosoft (software crypto engine)"
-	depends on OCF_OCF
+	depends on OCF_OCF && CRYPTO_HASH2
 	help
 	  A software driver for the OCF framework that uses
 	  the kernel CryptoAPI.
