SPEAr: selecting NEED_MACH_IO_H to restore io.h
commit c334bc15 ARM: make mach/io.h include optional

Removes mach/io.h inclusion by default for all machine. But spear13xx
needs it to define pcie io resource, otherwise it breaks the boot of
the kernel.

Now selecting NEED_MACH_IO_H to restore mach/io.h.

Signed-off-by: Liming Wang <liming.wang@windriver.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -989,6 +989,7 @@ config PLAT_SPEAR
 	select GENERIC_TIME
 	select HAVE_CLK
 	select ARCH_HAS_CPUFREQ
+	select NEED_MACH_IO_H
 	help
 	  Support for ST's SPEAr platform (SPEAr3xx, SPEAr6xx and SPEAr13xx).
 
