--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -2071,14 +2071,14 @@ config HAVE_GET_CYCLES_32
 	def_bool y
 	depends on !CPU_R4400_WORKAROUNDS
 	depends on !CPU_CAVIUM_OCTEON
-	select HAVE_TRACE_CLOCK
-	select HAVE_TRACE_CLOCK_32_TO_64
+	select HAVE_TRACE_CLOCK if LTT
+	select HAVE_TRACE_CLOCK_32_TO_64 if LTT
 	select HAVE_UNSYNCHRONIZED_TSC
 
 config HAVE_GET_CYCLES
 	def_bool y
 	depends on CPU_CAVIUM_OCTEON
-	select HAVE_TRACE_CLOCK
+	select HAVE_TRACE_CLOCK if LTT
 	select HAVE_UNSYNCHRONIZED_TSC
 
 #
