--- a/arch/powerpc/boot/dts/fsl/p5040si-post.dtsi
+++ b/arch/powerpc/boot/dts/fsl/p5040si-post.dtsi
@@ -33,18 +33,15 @@
  */
 
 &lbc {
-	compatible = "fsl,p5040-rev1.0-elbc", "simple-bus";
-	interrupts = <
-		25 2 0 0
-		16 2 1 19
-		>;
+	compatible = "fsl,p5040-elbc", "fsl,elbc", "simple-bus";
+	interrupts = <25 2 0 0>;
 	#address-cells = <2>;
 	#size-cells = <1>;
 };
 
 /* controller at 0x200000 */
 &pci0 {
-	compatible = "fsl,p5040-pcie", "fsl,qoriq-pcie-v2.2";
+	compatible = "fsl,p5040-pcie", "fsl,qoriq-pcie-v2.4", "fsl,qoriq-pcie-v2.2";
 	device_type = "pci";
 	#size-cells = <2>;
 	#address-cells = <3>;
@@ -71,7 +68,7 @@
 
 /* controller at 0x201000 */
 &pci1 {
-	compatible = "fsl,p5040-pcie", "fsl,qoriq-pcie-v2.2";
+	compatible = "fsl,p5040-pcie", "fsl,qoriq-pcie-v2.4", "fsl,qoriq-pcie-v2.2";
 	device_type = "pci";
 	#size-cells = <2>;
 	#address-cells = <3>;
@@ -98,7 +95,7 @@
 
 /* controller at 0x202000 */
 &pci2 {
-	compatible = "fsl,p5040-pcie", "fsl,qoriq-pcie-v2.2";
+	compatible = "fsl,p5040-pcie", "fsl,qoriq-pcie-v2.4", "fsl,qoriq-pcie-v2.2";
 	device_type = "pci";
 	#size-cells = <2>;
 	#address-cells = <3>;
@@ -259,7 +256,7 @@
 /include/ "qoriq-mpic.dtsi"
 
 	guts: global-utilities@e0000 {
-		compatible = "fsl,qoriq-device-config-1.0";
+		compatible = "fsl,p5040-device-config", "fsl,qoriq-device-config-1.0";
 		reg = <0xe0000 0xe00>;
 		fsl,has-rstcr;
 		#sleep-cells = <1>;
@@ -267,7 +264,7 @@
 	};
 
 	pins: global-utilities@e0e00 {
-		compatible = "fsl,qoriq-pin-control-1.0";
+		compatible = "fsl,p5040-pin-control", "fsl,qoriq-pin-control-1.0";
 		reg = <0xe0e00 0x200>;
 		#sleep-cells = <2>;
 	};
@@ -279,7 +276,7 @@
 	};
 
 	rcpm: global-utilities@e2000 {
-		compatible = "fsl,qoriq-rcpm-1.0";
+		compatible = "fsl,p5040-rcpm", "fsl,qoriq-rcpm-1.0";
 		reg = <0xe2000 0x1000>;
 		#sleep-cells = <1>;
 	};
@@ -326,13 +323,7 @@
 		};
 
 /include/ "qoriq-sata2-0.dtsi"
-	sata@220000 {
-		compatible = "fsl,p5020-sata", "fsl,pq-sata-v2";
-	};
 /include/ "qoriq-sata2-1.dtsi"
-	sata@221000 {
-		compatible = "fsl,p5020-sata", "fsl,pq-sata-v2";
-	};
 /include/ "qoriq-sec5.2-0.dtsi"
 /include/ "qoriq-qman1.dtsi"
 /include/ "qoriq-bman1.dtsi"
