powerpc: prevent to enable cpu hotplug on embedded 64bit kernel
Currently we still don't support the cpu hotplug on the
embedded 64bit kernel. So prevent to enable this option
in any case.

Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -338,7 +338,7 @@ config SWIOTLB
 config HOTPLUG_CPU
 	bool "Support for enabling/disabling CPUs"
 	depends on SMP && HOTPLUG && EXPERIMENTAL && (PPC_PSERIES || \
-	PPC_PMAC || PPC_POWERNV || PPC_85xx)
+	PPC_PMAC || PPC_POWERNV || PPC_85xx) && !CONFIG_PPC_BOOK3E_64
 	---help---
 	  Say Y here to be able to disable and re-enable individual
 	  CPUs at runtime on SMP machines.
