Samples: Clean up so modules and hostprogs build correctly
Add the samples directory to the core so that modules will
build.

Only build hostprogs if not cross compiling.  Otherwise the
resulting executables would be pretty much useless.

Signed-off-by: Jim Somerville <Jim.Somerville@windriver.com>

--- a/samples/hidraw/Makefile
+++ b/samples/hidraw/Makefile
@@ -4,7 +4,9 @@ obj- := dummy.o
 # List of programs to build
 hostprogs-y := hid-example
 
+ifeq ($(CROSS_COMPILE),)
 # Tell kbuild to always build the programs
 always := $(hostprogs-y)
+endif
 
 HOSTCFLAGS_hid-example.o += -I$(objtree)/usr/include
