Samples: use source dirs instead of the object dirs
Change to include headers from the source directories instead of the
object directories. This will allow the samples to more readily find
the necessary headers, avoiding having to run headers_install.

Signed-off-by: Jim Somerville <Jim.Somerville@windriver.com>

--- a/samples/hidraw/Makefile
+++ b/samples/hidraw/Makefile
@@ -9,4 +9,4 @@ ifeq ($(CROSS_COMPILE),)
 always := $(hostprogs-y)
 endif
 
-HOSTCFLAGS_hid-example.o += -I$(objtree)/usr/include
+HOSTCFLAGS_hid-example.o += -I$(srctree)/usr/include
