--- a/samples/seccomp/Makefile
+++ b/samples/seccomp/Makefile
@@ -4,13 +4,13 @@ obj- := dummy.o
 hostprogs-$(CONFIG_SECCOMP) := bpf-fancy dropper
 bpf-fancy-objs := bpf-fancy.o bpf-helper.o
 
-HOSTCFLAGS_bpf-fancy.o += -I$(objtree)/usr/include
-HOSTCFLAGS_bpf-fancy.o += -idirafter $(objtree)/include
-HOSTCFLAGS_bpf-helper.o += -I$(objtree)/usr/include
-HOSTCFLAGS_bpf-helper.o += -idirafter $(objtree)/include
+HOSTCFLAGS_bpf-fancy.o += -I$(srctree)/usr/include
+HOSTCFLAGS_bpf-fancy.o += -idirafter $(srctree)/include
+HOSTCFLAGS_bpf-helper.o += -I$(srctree)/usr/include
+HOSTCFLAGS_bpf-helper.o += -idirafter $(srctree)/include
 
-HOSTCFLAGS_dropper.o += -I$(objtree)/usr/include
-HOSTCFLAGS_dropper.o += -idirafter $(objtree)/include
+HOSTCFLAGS_dropper.o += -I$(srctree)/usr/include
+HOSTCFLAGS_dropper.o += -idirafter $(srctree)/include
 dropper-objs := dropper.o
 
 # bpf-direct.c is x86-only.
@@ -20,8 +20,8 @@ hostprogs-$(CONFIG_SECCOMP) += bpf-direct
 bpf-direct-objs := bpf-direct.o
 endif
 
-HOSTCFLAGS_bpf-direct.o += -I$(objtree)/usr/include
-HOSTCFLAGS_bpf-direct.o += -idirafter $(objtree)/include
+HOSTCFLAGS_bpf-direct.o += -I$(srctree)/usr/include
+HOSTCFLAGS_bpf-direct.o += -idirafter $(srctree)/include
 
 # Try to match the kernel target.
 ifeq ($(CONFIG_64BIT),)
