dpaa_eth: Reorganize Kconfig options
No longer exposing SG/non-SG option directly, but via the "optimize for
forwarding/termination" choices. This allows us to transparently work on
the two driver codebases.

Signed-off-by: Bogdan Hamciuc <bogdan.hamciuc@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.3-SOURCE-20121114-yocto.iso tarball.]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -136,12 +136,31 @@ config DPA_OFFLINE_PORTS
 	  so it is safe to have it.
 
 config DPAA_ETH_SG_SUPPORT
-	bool "Add support for S/G frames in the DPAA Ethernet driver"
+	bool
+
+choice DPAA_ETH_OPTIMIZE
+	prompt "Optimization choices for the DPAA Ethernet driver"
 	depends on DPA
-	default n
-	help
-	  Configure this to add S/G frames support in the DPAA Ethernet driver.
-	  Please note this replaces the optimal processing code also for non S/G frames.
+	default DPAA_ETH_OPTIMIZE_FOR_IPFWD
+
+	---help---
+	  Compile-time switch between driver optimizations for forwarding use-cases and
+	  termination scenarios.
+
+	config DPAA_ETH_OPTIMIZE_FOR_IPFWD
+		bool "Optimize for forwarding"
+		help
+		  Optimize the DPAA-Ethernet driver for IP/IPSec forwarding use-cases.
+
+	config DPAA_ETH_OPTIMIZE_FOR_TERM
+		bool "Optimize for termination"
+		select DPAA_ETH_SG_SUPPORT
+		help
+		  Optimize the DPAA-Ethernet driver for termination (TCP, UDP) use-cases.
+		  In particular, this choice enables Scatter-Gather (SG) support
+		  in the driver, which is momentarily not accessible otherwise.
+
+endchoice
 
 config FSL_DPA_1588
 	tristate "IEEE 1588-compliant timestamping"
@@ -150,6 +169,7 @@ config FSL_DPA_1588
 
 choice DPA_ETH_WQ_ASSIGN
 	prompt "WorkQueue assignment scheme for FrameQueues"
+	depends on DPA
 	default DPA_ETH_WQ_MULTI
 	help
 	  Selects the FrameQueue to WorkQueue assignment scheme.
