RAID/DMA/caamxor: support XOR offloading by CAAM
Add XOR offloading functionality by CAAM and interface with async_tx layer so that it can be used for RAID parity computation.

Signed-off-by: Naveen Burmi <naveenburmi@freescale.com>
Signed-off-by: Yuan Kang <Yuan.Kang@freescale.com>
Signed-off-by: Xuelin Shi <b29237@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.3-SOURCE-20121114-yocto.iso tarball.]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/drivers/crypto/caam/Kconfig
+++ b/drivers/crypto/caam/Kconfig
@@ -98,3 +98,17 @@ config CRYPTO_DEV_FSL_CAAM_RNG_API
 
 	  To compile this as a module, choose M here: the module
 	  will be called caamrng.
+
+config CRYPTO_DEV_FSL_CAAM_DMAXOR_API
+       tristate "Freescale CAAM XOR support"
+       depends on CRYPTO_DEV_FSL_CAAM && EXPERIMENTAL
+       default n
+       select DMA_ENGINE
+       select ASYNC_XOR
+       help
+         Selecting this will offload the xor-parity-calculation for
+         users of the Asynchronous Transfers/Transforms API (such as
+         md-raid5 driver) to the SEC4.
+
+	 To compile this as a module, choose M here: the module
+	 will be called caamxor.
