gianfar: Optimization for routed packets by exchanging rx/tx buffers
Patch enhances the Gianfar driver performance for the packets that are
received by the driver and transmitted by the driver in the same context.
Performance is enhanced by exchanging the skbs between the Tx and Rx rings,
rather than allocating new skbs from kernel or taking it from recycle queue.
The cleanup of BDs is done by the xmit function, so there is no need of the
Tx interrupts, or Tx cleanup functionality in the receive path, avoiding the
locks for cleanups

Patch gives best performance with DEFAULT_RX_RING_SIZE 32, DEFAULT_TX_RING_SIZE 32,
and GFAR_DEV_WEIGHT 32

Signed-off-by: Rajan Gupta <rajan.gupta@freescale.com>
[Kevin: Original patch taken from FSL
QorIQ-SDK-V1.2-SOURCE-20120614-yocto.iso image]
Signed-off-by: Kevin Hao <kexin.hao@windriver.com>
Signed-off-by: Tiejun Chen <tiejun.chen@windriver.com>

--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -64,6 +64,14 @@ config FSL_PQ_MDIO
 
 source "drivers/net/ethernet/freescale/dpa/NetCommSw/Kconfig"
 
+config RX_TX_BUFF_XCHG
+        default n
+	bool "RX and TX ring buffer exchange for Routed packets"
+	depends on GIANFAR && EXPERIMENTAL
+	---help---
+	  Enable this flag to get better throughput for the routing functionality.
+	  Enhances the performance for IPv4 Routing, NAT forwarding.
+ 
 config GFAR_HW_TCP_RECEIVE_OFFLOAD
 	default n
 	bool "Hardware TCP receive offload"
