--- a/tools/perf/Makefile
+++ b/tools/perf/Makefile
@@ -956,7 +956,7 @@ install: all
 	$(INSTALL) scripts/python/bin/* -t '$(DESTDIR_SQ)$(perfexec_instdir_SQ)/scripts/python/bin'
 
 install-python_ext:
-	$(PYTHON_WORD) util/setup.py --quiet install --prefix='$(DESTDIR_SQ)/usr'
+	$(PYTHON_WORD) util/setup.py --quiet install $(PYTHON_EXT_INSTALL_LIB) --prefix='$(DESTDIR_SQ)/usr'
 
 install-doc:
 	$(MAKE) -C Documentation install
