trace/Kconfig: add PERF_EVENTS to UPROBE_EVENT selected options
PERF_EVENTS must be built to provide the functionality that
UPROBE_EVENT requires, or we end up with linkage errors.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/kernel/trace/Kconfig
+++ b/kernel/trace/Kconfig
@@ -392,6 +392,7 @@ config UPROBE_EVENT
 	depends on MMU
 	select UPROBES
 	select PROBE_EVENTS
+	select PERF_EVENTS
 	select TRACING
 	default n
 	help
