--- a/drivers/net/ethernet/freescale/Kconfig
+++ b/drivers/net/ethernet/freescale/Kconfig
@@ -116,7 +116,7 @@ config GIANFAR_L2SRAM
 
 config DPA
 	bool "Freescale Data Path Frame Manager Ethernet"
-	depends on FSL_SOC && FSL_BMAN && FSL_QMAN && FSL_FMAN
+	depends on FSL_SOC && FSL_BMAN && FSL_QMAN && FSL_FMAN && LIBFCOE=n
 	select PHYLIB
 
 config DPA_OFFLINE_PORTS
