--- a/drivers/net/ethernet/freescale/dpa/NetCommSw/src/xx/Makefile
+++ b/drivers/net/ethernet/freescale/dpa/NetCommSw/src/xx/Makefile
@@ -8,5 +8,6 @@ include $(srctree)/drivers/net/ethernet/freescale/dpa/NetCommSw/ncsw_config.mk
 
 obj-y		+= fsl-ncsw-xx.o
 
-fsl-ncsw-xx-objs	:=   xx_linux.o udivdi3.o stdlib.o
+fsl-ncsw-xx-objs	:=   xx_linux.o udivdi3.o stdlib.o \
+				module_strings.o
 
