V3 Add user space stack dump.
https://lkml.org/lkml/2012/4/17/249

Extend the current proc_pid_stack() output to include the user space stack as well.
The application must be compiled with stack frame pointers to produce
meaningful output.

Note: proc_pid_stack() is only called when reading from
/proc/<pid>/stack.  There is no other runtime performance impact.

Example dump of bash pid 589 stack containing both kernel and (new)
user stack info:
        root@qemu0:/# cat /proc/589/stack
        [<c1032d6c>] do_wait+0x1ac/0x230
        [<c1033f5d>] sys_wait4+0x7d/0xc0
        [<c1033fcc>] sys_waitpid+0x2c/0x30
        [<c16966d0>] sysenter_do_call+0x12/0x26
        [<ffffffff>] 0xffffffff
        userspace
        ffffe424
        08083bbc
        08074691
        080770e8
        08060f68
        0805f678
        4103d443

The userspace portion is in hex only because the kernel does not
know (or care to know) the userspace symbols so that it can print out
the corresponding function names.  However, the process running at the
time is known (e.g. 589==bash).  The developer can then run addr2line
-e <bash executable> and paste in the relevant hex address to get a
pointer to the function of interest.  addr2line can take an input
stream of many addresses, i.e. you can cut and paste all the US
hex values at once.

Note: this patch can be enabled/disabled via Kconfig CONFIG_EXT_USER_STACKTRACE_SUPPORT

Author's original patch notification:
https://lkml.org/lkml/2012/4/17/249

Extra information here:
https://lkml.org/lkml/2012/4/19/11

Signed-off-by: yanmin zhang <yanmin_zhang@linux.intel.com>
Signed-off-by: xiaobing tu <xiaobing.tu@intel.com>
Signed-off-by: Paul Barrette <paul.barrette@windriver.com>
[Pb: rewrote commit log, added doc, Kconfig, cleaned fuzz]

--- a/kernel/trace/Kconfig
+++ b/kernel/trace/Kconfig
@@ -6,6 +6,14 @@
 config USER_STACKTRACE_SUPPORT
 	bool
 
+config EXT_USER_STACKTRACE_SUPPORT
+	bool "Extended user space stack dump support"
+	depends on USER_STACKTRACE_SUPPORT
+	default n
+	help
+		Adds the user space stack to /proc/<pid>/stack.
+		See Documentation/trace/user-stack-dump.txt.
+
 config NOP_TRACER
 	bool
 
