--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -1995,4 +1995,14 @@ config RTC_DRV_POLARFIRE_SOC
 	  This driver can also be built as a module, if so, the module
 	  will be called "rtc-mpfs".
 
+config RTC_DRV_S32CC
+	bool "RTC driver for S32CC"
+	depends on SOC_S32CC
+	default y
+	help
+	  Say yes to enable RTC driver for
+	  platforms based on the S32CC SoC
+	  family. This RTC module is being used in cases
+	  such as STR (Suspend-To-RAM).
+
 endif # RTC_CLASS
