--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -82,6 +82,8 @@ source "drivers/staging/vme_user/Kconfig"
 
 source "drivers/staging/fclk/Kconfig"
 
+source "drivers/staging/xlnxsync/Kconfig"
+
 source "drivers/staging/xroeframer/Kconfig"
 
 source "drivers/staging/xroetrafficgen/Kconfig"
