--- a/Documentation/devicetree/bindings/serial/fsl,s32-linflexuart.yaml
+++ b/Documentation/devicetree/bindings/serial/fsl,s32-linflexuart.yaml
@@ -52,6 +52,9 @@ properties:
       - const: rx
       - const: tx
 
+  rs485-rts-active-low: true
+  linux,rs485-enabled-at-boot-time: true
+
 required:
   - compatible
   - reg
