dt-bindings: mmc: fsl-imx-esdhc: add compatible for S32CC
commit 9ac141ffd069cf267901c057bfd3bbaeeba1be01 from
https://github.com/nxp-auto-linux/linux

Issue: ALB-9095

Signed-off-by: Radu Pirea <radu-nicolae.pirea@nxp.com>
Signed-off-by: Zhantao Tang <zhantao.tang@windriver.com>

--- a/Documentation/devicetree/bindings/mmc/fsl-imx-esdhc.yaml
+++ b/Documentation/devicetree/bindings/mmc/fsl-imx-esdhc.yaml
@@ -36,7 +36,7 @@ properties:
           - fsl,imx7ulp-usdhc
           - fsl,imx8mm-usdhc
           - fsl,imxrt1050-usdhc
-          - nxp,s32g2-usdhc
+          - nxp,s32cc-usdhc
       - items:
           - enum:
               - fsl,imx8mq-usdhc
