--- a/Documentation/devicetree/bindings/dma/fsl,edma.yaml
+++ b/Documentation/devicetree/bindings/dma/fsl,edma.yaml
@@ -19,6 +19,7 @@ properties:
   compatible:
     oneOf:
       - enum:
+          - nxp,s32cc-edma  
           - fsl,vf610-edma
           - fsl,imx7ulp-edma
       - items:
@@ -152,4 +153,27 @@ examples:
                    <GIC_SPI 16 IRQ_TYPE_LEVEL_HIGH>;
        clock-names = "dma", "dmamux0";
        clocks = <&pcc2 IMX7ULP_CLK_DMA1>, <&pcc2 IMX7ULP_CLK_DMA_MUX1>;
+    };
+
+  - |
+    #include <dt-bindings/interrupt-controller/arm-gic.h>
+    #include <dt-bindings/clock/s32cc-clock.h>
+
+    edma0: dma-controller@40144000 {
+           #dma-cells = <2>;
+           compatible = "nxp,s32cc-edma";
+           reg = <0x0 0x40144000 0x0 0x24000>,
+                     <0x0 0x4012c000 0x0 0x3000>,
+                     <0x0 0x40130000 0x0 0x3000>;
+           dma-channels = <32>;
+           interrupts = <GIC_SPI 8 IRQ_TYPE_LEVEL_HIGH>,
+                            <GIC_SPI 9 IRQ_TYPE_LEVEL_HIGH>,
+                            <GIC_SPI 10 IRQ_TYPE_LEVEL_HIGH>;
+           interrupt-names = "edma-tx_0-15",
+                             "edma-tx_16-31",
+                             "edma-err";
+           clock-names = "dmamux0", "dmamux1";
+           clocks = <&clks S32CC_SCMI_CLK_EDMA_MODULE>,
+                    <&clks S32CC_SCMI_CLK_EDMA_AHB>;
+           status = "disabled";
     };
