--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -136,9 +136,11 @@ dtb-$(CONFIG_ARCH_MXC) += imx8mm-venice-gw73xx-0x-rs422.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mm-venice-gw73xx-0x-rs485.dtb
 
 dtb-$(CONFIG_ARCH_S32) += s32g2xxa-evb.dtb
+dtb-$(CONFIG_ARCH_S32) += s32g274a-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += s32g3xxa-evb.dtb
 dtb-$(CONFIG_ARCH_S32) += s32g3xxa-evb3.dtb
 dtb-$(CONFIG_ARCH_S32) += s32g274a-rdb2.dtb
 dtb-$(CONFIG_ARCH_S32) += s32g399a-rdb3.dtb
+dtb-$(CONFIG_ARCH_S32) += s32g399a-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += s32r45-evb.dtb
 dtb-$(CONFIG_ARCH_S32) += s32v234-evb.dtb
