s32cc: doc: Fix multiple devicetree bindings documentation errors
commit a01fca1fc42fce1fc445e68724c7eb165a55c339 from
https://github.com/nxp-auto-linux/linux

Issue: ALB-9419
Signed-off-by: Ciprian Marian Costea <ciprianmarian.costea@nxp.com>
Signed-off-by: Zhantao Tang <zhantao.tang@windriver.com>

--- a/Documentation/devicetree/bindings/serial/fsl,s32-linflexuart.yaml
+++ b/Documentation/devicetree/bindings/serial/fsl,s32-linflexuart.yaml
@@ -68,6 +68,9 @@ examples:
   - |
     #include <dt-bindings/clock/s32cc-scmi-clock.h>
 
+    #define S32V234_CLK_LIN0 131
+    #define S32V234_CLK_LIN0_IPG 132
+
     serial@401c8000 {
         compatible = "nxp,s32cc-linflexuart";
         reg = <0x401C8000 0x3000>;
