--- a/arch/arm64/boot/dts/freescale/s32g2.dtsi
+++ b/arch/arm64/boot/dts/freescale/s32g2.dtsi
@@ -4,7 +4,7 @@
  *
  * Copyright (c) 2021 SUSE LLC
  * Copyright (c) 2017-2021 NXP
- * Copyright 2021-2022 NXP
+ * Copyright (c) 2021-2023 NXP
  */
 
 #include "s32g.dtsi"
@@ -27,4 +27,8 @@
 
 &nvram {
 	compatible = "nxp,s32g2-siul2_0-nvmem";
+};
+
+&tmu {
+	compatible = "nxp,s32g2-tmu";
 };
