--- a/drivers/staging/media/imx/Makefile
+++ b/drivers/staging/media/imx/Makefile
@@ -24,6 +24,7 @@ obj-$(CONFIG_IMX8_PARALLEL_CSI)          += imx8-parallel-csi.o
 obj-$(CONFIG_IMX8_MEDIA_DEVICE)   += imx8-media-dev.o
 obj-$(CONFIG_GMSL_MAX9286)       += gmsl-max9286.o
 obj-$(CONFIG_IMX8_CAPTURE_DRIVER) += imx8-capture.o
+obj-$(CONFIG_IMX8_ISI_CORE) += imx8-capture.o
 obj-$(CONFIG_IMX8_ISI_CAPTURE)           += imx8-isi-capture.o
 obj-$(CONFIG_IMX8_ISI_M2M)     += imx8-isi-mem2mem.o
 obj-$(CONFIG_IMX8_ISI_HW)        += imx8-isi-hw.o
