dts: Aptiv-FL: add dts file for Aptiv CVC-FL board
This patch comes from the patch:
meta-cvc-fl/recipes-kernel/linux/linux-s32/0001-ESL-427-Linux-S32-cvc-support+cleanup.patch

Modifications as below:
1. Change usb phy from "usb-nop-xceiv" to "usb-phy-ulpi-generic".
2. Add "can17_19_en-hog" to enable can17~19.
3. Add "can0-stb-hog" and "can0-en-hog" to enable can0.

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -154,3 +154,4 @@ dtb-$(CONFIG_ARCH_S32) += s32g399a-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += s32r45-evb.dtb
 dtb-$(CONFIG_ARCH_S32) += s32r45-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += s32v234-evb.dtb
+dtb-$(CONFIG_ARCH_S32) += s32g399a-cvc-fl.dtb
